; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/host/extr_at91_mci.c_at91_mci_handle_cmdrdy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/host/extr_at91_mci.c_at91_mci_handle_cmdrdy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.at91mci_host = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@FL_SENT_STOP = common dso_local global i32 0, align 4
@AT91_MCI_IER = common dso_local global i32 0, align 4
@AT91_MCI_NOTBUSY = common dso_local global i32 0, align 4
@MMC_DATA_WRITE = common dso_local global i32 0, align 4
@AT91_MCI_TXBUFE = common dso_local global i32 0, align 4
@AT91_MCI_BLKE = common dso_local global i32 0, align 4
@ATMEL_PDC_PTCR = common dso_local global i32 0, align 4
@ATMEL_PDC_TXTEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.at91mci_host*)* @at91_mci_handle_cmdrdy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @at91_mci_handle_cmdrdy(%struct.at91mci_host* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.at91mci_host*, align 8
  store %struct.at91mci_host* %0, %struct.at91mci_host** %3, align 8
  %4 = load %struct.at91mci_host*, %struct.at91mci_host** %3, align 8
  %5 = getelementptr inbounds %struct.at91mci_host, %struct.at91mci_host* %4, i32 0, i32 1
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %7 = icmp ne %struct.TYPE_4__* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %55

9:                                                ; preds = %1
  %10 = load %struct.at91mci_host*, %struct.at91mci_host** %3, align 8
  %11 = getelementptr inbounds %struct.at91mci_host, %struct.at91mci_host* %10, i32 0, i32 1
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %15 = icmp ne %struct.TYPE_3__* %14, null
  br i1 %15, label %30, label %16

16:                                               ; preds = %9
  %17 = load %struct.at91mci_host*, %struct.at91mci_host** %3, align 8
  %18 = getelementptr inbounds %struct.at91mci_host, %struct.at91mci_host* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load i32, i32* @FL_SENT_STOP, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %16
  %24 = load %struct.at91mci_host*, %struct.at91mci_host** %3, align 8
  %25 = load i32, i32* @AT91_MCI_IER, align 4
  %26 = load i32, i32* @AT91_MCI_NOTBUSY, align 4
  %27 = call i32 @at91_mci_write(%struct.at91mci_host* %24, i32 %25, i32 %26)
  br label %29

28:                                               ; preds = %16
  store i32 1, i32* %2, align 4
  br label %55

29:                                               ; preds = %23
  br label %53

30:                                               ; preds = %9
  %31 = load %struct.at91mci_host*, %struct.at91mci_host** %3, align 8
  %32 = getelementptr inbounds %struct.at91mci_host, %struct.at91mci_host* %31, i32 0, i32 1
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* @MMC_DATA_WRITE, align 4
  %39 = and i32 %37, %38
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %52

41:                                               ; preds = %30
  %42 = load %struct.at91mci_host*, %struct.at91mci_host** %3, align 8
  %43 = load i32, i32* @AT91_MCI_IER, align 4
  %44 = load i32, i32* @AT91_MCI_TXBUFE, align 4
  %45 = load i32, i32* @AT91_MCI_BLKE, align 4
  %46 = or i32 %44, %45
  %47 = call i32 @at91_mci_write(%struct.at91mci_host* %42, i32 %43, i32 %46)
  %48 = load %struct.at91mci_host*, %struct.at91mci_host** %3, align 8
  %49 = load i32, i32* @ATMEL_PDC_PTCR, align 4
  %50 = load i32, i32* @ATMEL_PDC_TXTEN, align 4
  %51 = call i32 @at91_mci_write(%struct.at91mci_host* %48, i32 %49, i32 %50)
  br label %52

52:                                               ; preds = %41, %30
  br label %53

53:                                               ; preds = %52, %29
  br label %54

54:                                               ; preds = %53
  store i32 0, i32* %2, align 4
  br label %55

55:                                               ; preds = %54, %28, %8
  %56 = load i32, i32* %2, align 4
  ret i32 %56
}

declare dso_local i32 @at91_mci_write(%struct.at91mci_host*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
